# jam-viewer

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Containerfile.arm64  README.md  index.html  style.css
server/: ingest_server.py  requirements.txt  start.sh
src/: api.rs  app.rs  ingest.rs  lib.rs  main.rs  theory.rs
src/components/: fretboard.rs  mod.rs  timeline.rs
src/server/: ingest.rs  mod.rs
