[package]
name = "jam-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlAudioElement",
    "HtmlMediaElement",
    "HtmlInputElement",
    "File",
    "FileList",
    "Blob",
    "FormData",
    "Url",
    "Event",
    "EventTarget",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
